[project]
name = "project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "opencv-python>=4.13.0.90",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "roipoly>=0.5.3",
    "scikit-image>=0.24.0",
    "tqdm>=4.67.3",
]
